--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "url": "https://github.com/cyhfe/state-machine.git"
   },
   "scripts": {
+    "dev": "nodemon --exec ts-node --esm example.ts",
     "build": "rm -drf dist/* && rollup -c"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.0",
+    "nodemon": "^2.0.22",
     "rollup": "^3.20.6",
     "rollup-plugin-dts": "^5.3.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   }
